syntax = "proto3";

package greeter;
option go_package = "github.com/eitano-dojo/golang-grpc/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayGoodbye (ByeRequest) returns (ByeReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ByeRequest {
  string name = 1;
}
message ByeReply {
  string message = 1;
}


